objects/CSC_AHT_Report__c.object
<CustomObject>
    <description>Used to Snapshot Timer Entries for Average Handling Time for Cases</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hour__c</fullName>
        <inlineHelpText>24 Hour clock, example 1, thru 23</inlineHelpText>
        <label>Hour</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <inlineHelpText>Time in Seconds</inlineHelpText>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Date + Hour + Action Type + User Id</description>
        <externalId>true</externalId>
        <label>Unique_Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSC_AHT_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CSC AHT Report</label>
    <listViews>
        <fullName>CON_Business_Administrator_CSC_AHT_Report</fullName>
        <filterScope>Queue</filterScope>
        <label>CON Business Administrator</label>
        <queue>CON_Business_Administrator</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSC_Business_Administrators_CSC_AHT_Report</fullName>
        <filterScope>Queue</filterScope>
        <label>CSC Business Administrators</label>
        <queue>CSC_Business_Administrators</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>CSC KPI Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSC AHT Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>